--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@
         }
 
         .header-scrolled {
-            background-color: rgba(255, 255, 255, 0.95);
-            backdrop-filter: blur(10px);
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            background-color: rgba(255, 255, 255, 0.539); /* Slightly transparent white */
+            backdrop-filter: blur(15px); /* Blur effect */
             padding: 15px 0;
         }
 
         [data-theme="dark"] .header-scrolled {
-            background-color: rgba(26, 26, 26, 0.95);
+            background-color: rgba(26, 26, 26, 0.566); /* Slightly transparent dark for dark mode */
+            backdrop-filter: blur(15px); /* Maintain blur effect */
         }
 
         .header-scrolled .logo {
@@ -172,7 +172,7 @@
         }
 
         .header-scrolled .donate-btn {
-            background-color: var(--primary);
+            background-color: transparent;
             color: var(--white);
         }
 
@@ -616,7 +616,7 @@
         .progress-bar {
             width: 100%;
             height: 8px;
-            background-color: rgba(255, 255, 255, 0.2);
+            background-color: transparent;
             border-radius: 4px;
             overflow: hidden;
         }
@@ -624,7 +624,7 @@
         .progress-fill {
             width: 75%;
             height: 100%;
-            background-color: var(--accent);
+            background-color: var(--white);
             transition: width 0.5s ease;
             border-radius: 4px;
         }
@@ -700,7 +700,6 @@
 
         .event-header {
             padding: 25px;
-            border-bottom: 1px solid #eee;
         }
 
         .event-title {
